--- a/app/(public routes)/stories/page.module.css
+++ b/app/(public routes)/stories/page.module.css
@@ -8,6 +8,8 @@
 
 .title {
     margin-bottom: 24px;
+    line-height: 1.1;
+    text-align: center;
 }
 
 .filterSection {
@@ -115,9 +117,31 @@
     margin: 0;
 }
 
+.mobileFilter {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 100%;
+}
+
+.categorySelect {
+    width: 100%;
+    padding: 8px 8px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+}
+
+
 @media (min-width: 768px) {
     .page {
         padding: 60px 0;
+    }
+
+    .title {
+
+        font-size: 48px;
+ 
     }
 
     .categoryButton {
@@ -141,6 +165,12 @@
 
     .categoryButton {
         font-size: 18px;
+    }
+
+    .title {
+        
+        font-size: 56px;
+        
     }
 
     .noStoriesText {
